2012-11-19  Murray Cumming  <murrayc@murrayc.com>

        Examples: Remove unused list_related_* layouts.

        * examples/example_film_manager.glom:
        * examples/example_smallbusiness.glom:
        * glom/mode_data/box_data_calendar_related.cc:
        * glom/mode_data/box_data_list_related.cc:
        * ldtp/database-templates/PostgresCentral/Test.glom:
        * ldtp/database-templates/SQLite/Test.glom: These were
	saved by very old versions of Glom and not automatically
	removed by newer versions.

1.23.1:

2012-11-19  Murray Cumming  <murrayc@murrayc.com>

	Import example .po translations into the examples.
	
2012-11-12  Murray Cumming  <murrayc@murrayc.com>

        Resave the examples.

        * examples/example_project_manager.glom:
	Using make examples_import_po.

2012-11-12  Murray Cumming  <murrayc@murrayc.com>

        Document: Save static image data as a child text node, not an attribute.

        * glom/libglom/document/document.cc: load_after_layout_group(),
	save_before_layout_group(): Save LayoutItem_Image data as 
	a child text node of a <value> node, instead of as an attribute,
	because this is generally better for large chunks of arbitrary text,
	and because this lets us specify the format using the existing code.
        * glom/glom_document.dtd: Update appropriately.

2012-11-12  Murray Cumming  <murrayc@murrayc.com>

        Export to po files: Avoid duplicates.

        * glom/libglom/document/document.cc: Use a std::find_if()
	predicate to avoid adding a duplicate item/hint pair,
	which would result in a msgfmt -C error.

2012-11-11  Murray Cumming  <murrayc@murrayc.com>

        Regenerate .po files for examples, adding Print Layout items.

        * examples/po_files/:
	Using make example_export_po, and only committing the
	relevant changes.

2012-11-11  Murray Cumming  <murrayc@murrayc.com>

	Export to po files: Also export text items from Print Layouts.
        